# nekro-agent-toolkit

./: .gitignore  CLAUDE.md  DEVELOP-EN.md  MANIFEST.in  QWEN.md  README-EN.md  README.md  app.py  build-version.sh  build_to_wheel.sh  develop.md  install.py  pyproject.toml  requirements.in  requirements.txt  setup.py  todo.md  update.py
.github/instructions/: readme.md
.github/workflows/: docker-build.yml  generate-installer.yml  nixos-release.yaml  pypi-release.yml
conf/: i18n_settings.py  icons.py  install_settings.py
data/: IMPLEMENTATION.md  PYTHON_COMPATIBILITY.md  USAGE.md
data/ar_SA/: messages.py
data/en_US/: messages.py
data/es_ES/: messages.py
data/fr_FR/: messages.py
data/ja_JP/: messages.py
data/ru_RU/: messages.py
data/zh_CN/: messages.py
doc/: DEVELOP-EN.md  DEVELOP.md  README-AR.md  README-EN.md  README-ES.md  README-FR.md  README-RU.md  REGULATE-EN.md  REGULATE.md
doc/README/: README-AR.md  README-EN.md  README-ES.md  README-FR.md  README-JP.md  README-RU.md
doc/installer/: README-en_US.md  README-zh_CN.md  action-en_US.md  action-zh_CN.md
docker/: Dockerfile
module/: backup.py  update.py
release/nix/: nekro-agent-toolkit.nix
release/nixos/: flake.nix  nekro-agent-toolkit.nix
scripts/: add-dependency.sh  build-version.sh  build.sh  export_requirements.sh
tools/: backup_docker_images.py  dangling_image_clean.py  import_docker_images.py
utils/: backup_utils.py  docker_helpers.py  helpers.py  i18n.py  install_utils.py  update_utils.py
