[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekro-agent-toolkit"
version = "1.6.1"
description = "Nekro Agent 安装、更新与备份的统一管理工具"
readme = "README.md"
authors = [{name = "greenhandzdl"}]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
# dependencies are managed by `uv` and locked in `uv.lock`
# Keep dependency declarations here minimal. Use `uv` to add/remove packages.

[project.urls]
Homepage = "https://github.com/greenhandzdl/nekro-agent-toolkit"

[project.scripts]
nekro-agent-toolkit = "app:main"

[tool.setuptools.packages.find]
exclude = ["doc*", "tests*"]

[tool.setuptools.package-data]
conf = ["*.py"]
"data.zh_CN" = ["*.py"]
"data.en_US" = ["*.py"]
"data.es_ES" = ["*.py"]
"data.fr_FR" = ["*.py"]
"data.ja_JP" = ["*.py"]
"data.ru_RU" = ["*.py"]
"data.ar_SA" = ["*.py"]

[tool.setuptools]
py-modules = ["app"]
include-package-data = true
# license_files removed (use project.license-files)
